--- a/client/root-config/package.json
+++ b/client/root-config/package.json
@@ -28,6 +28,7 @@
     "jest-cli": "^27.5.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
+    "react-error-overlay": "6.0.9",
     "serve": "^13.0.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0",
@@ -38,6 +39,8 @@
   "dependencies": {
     "@types/jest": "^27.0.1",
     "@types/systemjs": "^6.1.1",
+    "dotenv-webpack": "^8.1.0",
+    "process": "^0.11.10",
     "single-spa": "^5.9.3",
     "single-spa-layout": "^1.6.0"
   }
