--- a/client/apps/navbar/package.json
+++ b/client/apps/navbar/package.json
@@ -47,6 +47,7 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "4.0.3",
     "single-spa-react": "^6.0.1"
   }
