--- a/client/apps/navbar/package.json
+++ b/client/apps/navbar/package.json
@@ -37,6 +37,7 @@
     "prettier": "^3.2.5",
     "pretty-quick": "^4.0.0",
     "react-error-overlay": "6.0.9",
+    "tailwindcss": "^3.4.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-config-single-spa-react": "^4.0.5",
@@ -44,6 +45,11 @@
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
