--- a/client/root-config/package.json
+++ b/client/root-config/package.json
@@ -40,8 +40,12 @@
     "@types/jest": "^27.0.1",
     "@types/systemjs": "^6.1.1",
     "dotenv-webpack": "^8.1.0",
+    "import-map-overrides": "^3.1.1",
     "process": "^0.11.10",
-    "single-spa": "^5.9.3",
-    "single-spa-layout": "^1.6.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "single-spa": "^6.0.1",
+    "single-spa-layout": "^1.6.0",
+    "systemjs": "^6.15.1"
   }
 }
