--- a/client/apps/home/package.json
+++ b/client/apps/home/package.json
@@ -52,6 +52,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.23.0",
     "single-spa-react": "^4.3.1"
   }
 }
