--- a/client/root-config/package.json
+++ b/client/root-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@TachMonShop/root-config",
   "scripts": {
-    "start": "webpack serve --port 9000 --env isLocal",
+    "start": "webpack serve --env isLocal",
     "lint": "eslint src --ext js",
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "format": "prettier --write .",
