--- a/client/apps/login/package.json
+++ b/client/apps/login/package.json
@@ -22,7 +22,7 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/runtime": "^7.23.3",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/react": "^15.0.7",
     "babel-jest": "^27.5.1",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
@@ -36,6 +36,7 @@
     "jest-cli": "^27.5.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
+    "tailwindcss": "^3.4.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0",
     "webpack-config-single-spa-react": "^4.0.0",
@@ -43,8 +44,13 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "axios": "^1.6.8",
+    "framer-motion": "^11.1.9",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "single-spa-react": "^4.3.1"
   }
 }
