--- a/client/apps/login/package.json
+++ b/client/apps/login/package.json
@@ -51,6 +51,7 @@
     "framer-motion": "^11.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0",
     "single-spa-react": "^4.3.1"
   }
 }
