--- a/client/apps/home/package.json
+++ b/client/apps/home/package.json
@@ -49,6 +49,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "clsx": "^2.1.1",
+    "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
