--- a/client/styleguide/package.json
+++ b/client/styleguide/package.json
@@ -50,6 +50,7 @@
     "postcss-loader": "^8.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "sass": "^1.75.0",
     "single-spa-react": "^6.0.1"
   }
