--- a/client/apps/navbar/package.json
+++ b/client/apps/navbar/package.json
@@ -50,11 +50,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "4.0.3",
+    "single-spa": "^6.0.1",
     "single-spa-react": "^6.0.1"
   }
 }
