--- a/client/styleguide/package.json
+++ b/client/styleguide/package.json
@@ -47,6 +47,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "postcss-loader": "^8.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
