--- a/client/api/.env
+++ b/client/api/.env
@@ -1,2 +1,2 @@
-AUTH_API_ENDPOINT="https://ducquan.id.vn/congngheweb/santhuongmai/api.php"
+SERVER_API_ENDPOINT="http://54.255.138.133/api"
 SEARCH_API_ENDPOINT="https://suggestqueries.google.com/complete/search"
