--- a/client/api/package.json
+++ b/client/api/package.json
@@ -43,7 +43,9 @@
     "@types/jest": "^27.0.1",
     "@types/systemjs": "^6.1.1",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "dotenv-webpack": "^8.1.0"
+    "dotenv-webpack": "^8.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
