--- a/client/apps/login/package.json
+++ b/client/apps/login/package.json
@@ -47,11 +47,14 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
+    "single-spa": "^6.0.1",
     "single-spa-react": "^4.3.1"
   }
 }
