--- a/client/apps/wishlist/package.json
+++ b/client/apps/wishlist/package.json
@@ -22,7 +22,7 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/runtime": "^7.23.3",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/react": "^15.0.7",
     "babel-jest": "^27.5.1",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
@@ -43,8 +43,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "framer-motion": "^11.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "single-spa-react": "^4.3.1"
   }
 }
