--- a/client/apps/wishlist/package.json
+++ b/client/apps/wishlist/package.json
@@ -49,6 +49,8 @@
     "framer-motion": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.2.1",
     "single-spa-react": "^4.3.1"
   }
 }
