--- a/file_on_server_2/.env
+++ b/file_on_server_2/.env
@@ -1,3 +1,9 @@
-PORT = 3000
+PORT=3000
 
 dbConfig={"host":"localhost","user":"quan","password":"335forever","database":"database_for_server2"}
+
+genTokenKey='NDQ'
+
+tokenTimeToLive='3h'
+
+password_salt_rounds=10
