upload new server file

--- a/file_on_server_2/.env
+++ b/file_on_server_2/.env
@@ -7,3 +7,7 @@ genTokenKey='NDQ'
 tokenTimeToLive='3h'
 
 password_salt_rounds=10
+
+EMAIL='hethongsanthuongmai@gmail.com'
+
+APP_PASSWORD='jcedwqxbnbiubphg'
