--- a/file_on_server_2/package.json
+++ b/file_on_server_2/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
+    "nodemailer": "^6.9.13",
     "pm2": "^5.3.1"
   },
   "devDependencies": {
