--- a/client/api/.env
+++ b/client/api/.env
@@ -1,2 +1,3 @@
-SERVER_API_ENDPOINT="http://54.255.138.133/api"
+SERVER_API_ENDPOINT="http://localhost:3000"
+MEDIA_API_ENDPOINT="https://ducquan.id.vn/congngheweb/santhuongmai"
 SEARCH_API_ENDPOINT="https://suggestqueries.google.com/complete/search"
