--- a/client/apps/product/package.json
+++ b/client/apps/product/package.json
@@ -51,7 +51,9 @@
     "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
+    "single-spa": "^6.0.1",
     "single-spa-react": "^4.3.1"
   }
 }
