fix: Revert db change

--- a/file_on_server_2/.env
+++ b/file_on_server_2/.env
@@ -1,6 +1,6 @@
 PORT=3000
 
-dbConfig={"host":"localhost","user":"root","database":"database_for_server2"}
+dbConfig={"host":"localhost","user":"quan","password":"335forever","database":"database_for_server2"}
 
 genTokenKey='NDQ'
 
