feat: Search & fix API bug

--- a/client/apps/search/package.json
+++ b/client/apps/search/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@TachMonShop/contact",
+  "name": "@TachMonShop/search",
   "scripts": {
     "start": "webpack serve",
     "start:standalone": "webpack serve --env standalone",
@@ -43,7 +43,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+   "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
