--- a/client/apps/home/package.json
+++ b/client/apps/home/package.json
@@ -55,6 +55,7 @@
     "react-query": "^3.39.3",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.0",
+    "single-spa": "^6.0.1",
     "single-spa-react": "^4.3.1"
   }
 }
