--- a/client/apps/contact/package.json
+++ b/client/apps/contact/package.json
@@ -43,14 +43,18 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "framer-motion": "^11.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icon": "^1.0.0",
-    "react-icons": "^5.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "clsx": "^2.1.1",
+    "html-webpack-plugin": "^5.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.23.0",
     "single-spa-react": "^4.3.1"
   }
 }
