--- a/client/apps/cart/package.json
+++ b/client/apps/cart/package.json
@@ -48,6 +48,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.3",
     "single-spa-react": "^4.3.1"
   }
 }
