--- a/client/apps/cart/package.json
+++ b/client/apps/cart/package.json
@@ -49,6 +49,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.39.3",
+    "single-spa": "^6.0.1",
     "single-spa-react": "^4.3.1"
   }
 }
