--- a/client/api/.env
+++ b/client/api/.env
@@ -1,3 +1,3 @@
-SERVER_API_ENDPOINT="http://localhost:3000"
+SERVER_API_ENDPOINT="https://54.255.209.5"
 MEDIA_API_ENDPOINT="https://ducquan.id.vn/congngheweb/santhuongmai"
 SEARCH_API_ENDPOINT="https://suggestqueries.google.com/complete/search"
